other-mpol/disable-service-discovery/.chainsaw-test/podcontrollers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      dnsPolicy: None
      enableServiceLinks: true
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - image: ghcr.io/kyverno/test-busybox:1.35
            name: busybox
          restartPolicy: OnFailure
