other-mpol/disable-service-discovery/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  dnsPolicy: None
  enableServiceLinks: true
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
