other-mpol/disable-service-discovery/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disable-service-discovery
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disable-service-discovery.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pods.yaml
    - assert:
        file: pods-patched.yaml
  - name: step-03
    try:
    - apply:
        file: podcontrollers.yaml
    - assert:
        file: podcontrollers-patched.yaml
